# app-xray

./: .gitignore  README.md  SPEC.md  pyproject.toml
.github/workflows/: test.yml
app_xray/: __init__.py  analyzer.py  cli.py  models.py  scoring.py
app_xray/extractors/: certificates.py  endpoints.py  manifest.py  network_paths.py  patterns.py  permissions.py  trackers.py
app_xray/reporters/: diff.py  html.py  json_out.py  terminal.py
app_xray/templates/: report.html
tests/: test_analyzer.py  test_certificates.py  test_endpoints.py  test_manifest.py  test_manifest_extended.py  test_network_paths.py  test_patterns.py  test_permissions.py  test_reporters.py  test_scoring.py  test_scoring_extended.py  test_trackers.py
