[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "app-xray"
version = "0.1.0"
description = "Automated Android APK privacy auditor"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
authors = [{name = "Jake Silverman"}]
keywords = ["android", "apk", "privacy", "security", "audit"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Topic :: Security",
]
dependencies = [
    "androguard>=4.1.0",
    "click>=8.0",
    "rich>=13.0",
    "jinja2>=3.0",
    "requests>=2.28",
]

[project.optional-dependencies]
dev = ["pytest>=7.0"]

[project.scripts]
app-xray = "app_xray.cli:main"

[tool.setuptools.packages.find]
include = ["app_xray*"]

[tool.setuptools.package-data]
app_xray = ["data/*.json", "templates/*.html"]
